parameterize the zookeeper group name

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,5 @@ collectd_ver : '5.5.0'
 collectd_mirror : 'https://collectd.org/files'
 collectd_build_clean : False
 collectd_network_port : 25826
+
+collectd_zk_groupname : 'zookeeper'
