--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,6 +1,7 @@
 ---
-collectd_name : 'collectd-{{collectd_ver}}'
-collectd_tgz : '{{collectd_name}}.tar.gz'
-collectd_tgz_url : '{{collectd_mirror}}/{{collectd_tgz}}'
-collectd_src_dir : '/opt/{{collectd_name}}'
-collectd_target_dir : '/opt/{{collectd_name}}-bin'
+collectd_name : collectd-{{ collectd_ver }}
+collectd_tgz : '{{ collectd_name }}.tar.bz2'
+collectd_tgz_url : '{{ collectd_mirror }}/{{ collectd_tgz }}'
+collectd_checksum: '{{ collectd_checksums[collectd_ver] }}'
+collectd_src_dir : /opt/{{ collectd_name }}
+collectd_target_dir : /opt/{{ collectd_name }}-bin
