--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,24 +1,38 @@
 ---
 galaxy_info:
   author: Andrew Rothstein
-  description: collectd role
-  company: BlackRock
+  description: installs collectd
+  company: BlackRock Financial Management
   license:
     - MIT
-  min_ansible_version: 1.2
+  min_ansible_version: 2.0
   platforms:
     - name: EL
       versions:
-        - 7
+        - all
     - name: Fedora
       versions:
-        - 21
-        - 22
-        - 23
-
+        - all
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Alpine
+      versions:
+        - all
+    - name: Archlinux
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - buster
+        - jessie
+        - stretch
   galaxy_tags:
     - development
+  role_name: collectd
 
-dependencies: []
-
-  
+dependencies:
+  - role: andrewrothstein.unarchive-deps
+    version: v1.1.1
+  - role: andrewrothstein.gcc-toolbox
+    version: v1.0.14
